--- a/style.css
+++ b/style.css
@@ -48,12 +48,13 @@ body {
 }
 
 .container {
-  max-width: 500px;
-  margin: auto;
+  width: 90vw;
+  max-width: 900px;
+  margin: 30px auto;
   background: white;
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  padding: 30px 20px;
+  border-radius: 16px;
+  box-shadow: 0 0 16px rgba(0,0,0,0.10);
 }
 
 .inputs input {
@@ -133,7 +134,7 @@ button {
     margin: 0;
     border-radius: 0;
     box-shadow: none;
-    padding: 20px 5px 30px 5px;
+    padding: 15px 2vw 25px 2vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
